Revision history for perl distribution Mojolicious-Plugin-Webpack

0.14 Not Released
 - Fix route warnings issued by latest Mojolicious

0.13 2020-09-07T10:10:24+0900
 - Fix "sass-loader" options #4
 - Removed support for "shim"
 - Improved documentation

0.12 2019-10-07T07:02:11+0900
 - Renamed every ".dev." file to ".development." #2

0.11 2019-10-05T22:12:07+0900
 - Will skip entries in generated HTML file that does not match current mode.

0.10 2019-10-02T15:35:43+0900
 - Add support for custom "npm" binary
 - Need to look in "devDependencies" as well to skip install of node module
 - Will only install modules once

0.09 2019-05-20T22:37:42+0200
 - Add support for rollup.js
 - Changed the EXPERIMENTAL statement

0.08 2019-04-04T22:34:48+0700
 - Fix annoying default for Cache-Control when developing

0.07 2019-04-04T22:19:40+0700
 - Add Cache-Control to response headers
 - Fix passing on arguments using the "webpack" command
 - Change webpack-md5-hash to the superior webpack-plugin-hash-output

0.06 2019-01-13T10:52:34+0900
 - Converted crushinator script to mojo webpack subcommand
   You need to manually remove `which crushinator` if already installed.

0.05 2018-12-27T13:21:34+0900
 - Use terser-webpack-plugin instead of uglifyjs-webpack-plugin

0.04 2018-12-26T13:53:46+0900
 - Fix typo in webpack.custom.js
 - Add M::P::Webpack::Builder to make M::P::Webpack a production shim
 - M::P::Webpack::Builder can install a shim into your application

0.03 2018-12-20T12:50:22+0900
 - Add url_for() method
 - Will migrate assetpack.def from AssetPack into webpack custom config
 - Change webpack to only run when requested
 - Documented how to test your assets

0.02 2018-11-16T19:53:02+0900
 - Fix markup.t

0.01 2018-11-07T15:44:27+0900
 - Will automatically setup webpack config files
 - Can process CSS, JavaScript, Sass and Vue
 - Can extend the webpack config file
 - Add automatic installation of node modules
 - Add crushinator for development