@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-Webpack
 
 0.14 Not Released
  - Fix route warnings issued by latest Mojolicious
+ - Will install new node modules present in "dependencies"
 
 0.13 2020-09-07T10:10:24+0900
  - Fix "sass-loader" options #4
